--- a/HelloCode/Views/Home/Index.cshtml
+++ b/HelloCode/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="jumbotron">
-    <h1>Hello World!</h1>
+    <h1>Hello Vijay!</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
@@ -11,7 +11,7 @@
 <div class="row">
     <div class="col-md-4">
         <h2>Getting started</h2>
-        <p>
+        <p>Greetings!
             ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
             enables a clean separation of concerns and gives you full control over markup
             for enjoyable, agile development.
